--- a/AutomatingPVRCenemas/test-output/old/Default suite/methods-alphabetical.html
+++ b/AutomatingPVRCenemas/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7ec378">  <td>21/05/29 11:52:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PVRCinemasServicesTest.SampleTest2()[pri:4, instance:com.testometer.pvrCinemasMain.PVRCinemasServicesTest@7a765367]">SampleTest2</td> 
-  <td>main@1920467934</td>   <td></td> </tr>
-<tr bgcolor="7ec378">  <td>21/05/29 11:52:53</td>   <td>50</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PVRCinemasServicesTest.getBrowserInstanceTest1()[pri:6, instance:com.testometer.pvrCinemasMain.PVRCinemasServicesTest@7a765367]">getBrowserInstanceTest1</td> 
-  <td>main@1920467934</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>21/05/30 11:07:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PVRCinemasHomeTest.addingNumbersTest()[pri:0, instance:com.testometer.pvrCinemasMain.PVRCinemasHomeTest@2f943d71]">addingNumbersTest</td> 
+  <td>main@388043093</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>21/05/30 11:07:44</td>   <td>118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PVRCinemasHomeTest.addingNumbersTest2()[pri:0, instance:com.testometer.pvrCinemasMain.PVRCinemasHomeTest@2f943d71]">addingNumbersTest2</td> 
+  <td>main@388043093</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>21/05/30 11:07:44</td>   <td>147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PVRCinemasHomeTest.afterMethod()[pri:0, instance:com.testometer.pvrCinemasMain.PVRCinemasHomeTest@2f943d71]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@388043093</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>21/05/30 11:07:44</td>   <td>147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PVRCinemasHomeTest.afterMethod()[pri:0, instance:com.testometer.pvrCinemasMain.PVRCinemasHomeTest@2f943d71]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@388043093</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>21/05/30 11:07:44</td>   <td>117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PVRCinemasHomeTest.beorMethod()[pri:0, instance:com.testometer.pvrCinemasMain.PVRCinemasHomeTest@2f943d71]">&gt;&gt;beorMethod</td> 
+<td>&nbsp;</td>  <td>main@388043093</td>   <td></td> </tr>
+<tr bgcolor="7ec378">  <td>21/05/30 11:07:44</td>   <td>117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PVRCinemasHomeTest.beorMethod()[pri:0, instance:com.testometer.pvrCinemasMain.PVRCinemasHomeTest@2f943d71]">&gt;&gt;beorMethod</td> 
+<td>&nbsp;</td>  <td>main@388043093</td>   <td></td> </tr>
 </table>
